Update cluster.md